# OFileBackup

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/BackupFolder/: CMakeLists.txt
src/BackupFolder/private/: main.cpp
src/CompareManifest/: CMakeLists.txt
src/CompareManifest/private/: main.cpp
src/RecoverFolder/: CMakeLists.txt
src/RecoverFolder/private/: main.cpp
src/libfilebackup/: CMakeLists.txt
src/libfilebackup/private/: FileBackupCommon.cpp  FileBackupInternal.cpp  FileBackupInternal.h  FileBackupManager.cpp  FileBackupManagerBase.cpp  FileBackupManagerBase.h  FileBackupManagerGatherAll.cpp  FileBackupManagerGatherAll.h  FileBackupManagerMinChunk.cpp  FileBackupManagerMinChunk.h  FolderRecoverHelper.cpp  FolderRecoverProgressImpl.cpp  FolderRecoverProgressImpl.h
src/libfilebackup/public/: FileBackupCommon.h  FileBackupError.h  FileBackupExportDef.h  FileBackupManager.h  FolderRecoverHelper.h
src/libfilebackup_cexport/: CMakeLists.txt
src/ofilebackup/: CMakeLists.txt
src/ofilebackup/private/: main.cpp  ofilebackup_actions.cpp  ofilebackup_actions.h
src/ofilebackup/public/: ofilebackup_actions.h
