NewTargetSource()
AddSourceFolder(INCLUDE RECURSE PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/public")
AddSourceFolder(RECURSE "${CMAKE_CURRENT_SOURCE_DIR}/private")
source_group(TREE ${PROJECT_SOURCE_DIR} FILES ${SourceFiles})

find_package(Boost)

function(configure_library TARGET_NAME)
    set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "OFileBackup")
    target_compile_features(${TARGET_NAME} PRIVATE cxx_std_23)
    set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD_REQUIRED ON)
    set_target_properties(${TARGET_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)

    target_link_libraries(${TARGET_NAME} PRIVATE concurrentqueue::concurrentqueue)
    target_link_libraries(${TARGET_NAME} PRIVATE rollinghashcpp::rollinghashcpp)
    target_link_libraries(${TARGET_NAME} PRIVATE xxHash::xxhash)
    target_link_libraries(${TARGET_NAME} PRIVATE MbedTLS::mbedcrypto)
    target_link_libraries(${TARGET_NAME} PRIVATE zstd::libzstd_static)
    target_link_libraries(${TARGET_NAME} PRIVATE RapidJSON::RapidJSON)

    if(Boost_FOUND)
        target_compile_definitions(${TARGET_NAME} PRIVATE -DBOOST_FOUND)
        target_link_libraries(${TARGET_NAME} PRIVATE Boost::headers)
    else()
        target_link_libraries(${TARGET_NAME} PRIVATE absl::flat_hash_map)
        target_link_libraries(${TARGET_NAME} PRIVATE absl::flat_hash_set)
    endif()

    AddTargetInclude(${TARGET_NAME})

    add_library(${PROJECT_NAME}::${TARGET_NAME} ALIAS ${TARGET_NAME})

    if(NOT UTILPP_DISABLE_INSTALL)
        AddTargetInstall(${TARGET_NAME} ${PROJECT_NAME})
    endif()
endfunction()

set(TARGET_NAME libfilebackup)
add_library(${TARGET_NAME} SHARED ${SourceFiles})
target_link_libraries(${TARGET_NAME} PRIVATE UTILPP::simple_utilpp)
target_link_libraries(${TARGET_NAME} PRIVATE simdjson::simdjson)
target_link_libraries(${TARGET_NAME} PUBLIC UTILPP::simple_utilpp)
target_compile_definitions(${TARGET_NAME} PRIVATE -DLIB_FILEBACKUP_API_EXPORTS)
configure_library(${TARGET_NAME})

set(TARGET_NAME libfilebackup_a)
add_library(${TARGET_NAME} STATIC ${SourceFiles})
target_link_libraries(${TARGET_NAME} PRIVATE UTILPP::simple_utilpp_a)
target_link_libraries(${TARGET_NAME} PRIVATE simdjson::simdjson_static)
target_link_libraries(${TARGET_NAME} PUBLIC UTILPP::simple_utilpp_a)
target_compile_definitions(${TARGET_NAME} PUBLIC -DLIB_FILEBACKUP_API_NODLL)
configure_library(${TARGET_NAME})